# robosim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  assignment.sln  assignment.vcxproj  assignment.vcxproj.filters  framework.vcxproj  framework.vcxproj.filters  generate_submission.bat  imgui.ini  robosim.sln  robosim.vcxproj
assets/: Model1.attach  Model1.skel
assets/animations/: mocapguy.bvh  mocapguy.bvhobj  mocapguy.names
lib/GLFW/: README.md
lib/GLFW/lib-vc2010/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
lib/GLFW/lib-vc2012/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
lib/GLFW/lib-vc2013/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
lib/GLFW/lib-vc2015/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
lib/imgui/: CMakeLists.txt
src/: App.cpp  App.hpp  Main.cpp  Source.cpp
src/base/: App.cpp  App.hpp  DhParam.cpp  InverseKinematics.cpp  InverseKinematics.hpp  JointedLink.cpp  JointedLink.hpp  Link.cpp  Link.hpp  RobotGraphics.cpp  RobotGraphics.hpp  params.txt  robot.cpp  robot.hpp  skeleton.cpp  skeleton.hpp  utility.hpp
src/core/: App.cpp  App.hpp  Application.cpp  Application.hpp  DhParam.cpp  DhParam.hpp  Event.hpp  EventDispatcher.hpp  Input.hpp  InverseKinematics.cpp  InverseKinematics.hpp  JointedLink.cpp  JointedLink.hpp  PidController.cpp  PidController.hpp  Robot.cpp  Robot.hpp  Utility.hpp
src/meshes/: BoxMesh.cpp  BoxMesh.hpp  CylinderMesh.cpp  CylinderMesh.hpp  JointedLinkMesh.cpp  JointedLinkMesh.hpp  Mesh.cpp  Mesh.hpp  SphereMesh.cpp  SphereMesh.hpp
src/rendering/: Camera.cpp  Camera.hpp  Shader.hpp
src/resources/: params.txt
(+45 files in other folders)
